# ChicagoCrime

./: .gitignore  arrestdb.py  main.ipynb  output.csv  output.sqlite  pyproject.toml  scrape.py
