[tool.poetry]
name = "chicagocrime"
version = "0.1.0"
description = "Exposing the most recent domestic violence cases in the city of chicago."
authors = ["joeyxsalazar <salazarxjoey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
playwright = "^1.57.0"
brightdata = "^0.4.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
